The initial prototype of the application.
Currently the following functionality is in place:
 - Auth through AD
 - Token-based auth for the API
 - Superusers can manage cloudadmin projects
 - Cloudadmin projects can have other admins assigned.
 - Cloudadmin admins can create openstack-projects, adjust quotas etc.

All functionality is available through a web-interface, and all changes are done through a REST-api which can be scripted in addition to the web API.

--- a/cloudadmin/templates/cloudadmin/debug.html
+++ b/cloudadmin/templates/cloudadmin/debug.html
@@ -22,6 +22,7 @@
             <li>{{g.name}}</li>
           {% endfor %}
         </ul>
+        <li><b>Superuser:</b> {{ user.is_superuser }}</li>
       </ul>
     </div>  
   </div>
