--- a/cloudadmin/templates/cloudadmin/index.html
+++ b/cloudadmin/templates/cloudadmin/index.html
@@ -1,21 +1,61 @@
 {% extends "base/main.html" %} 
+{% load staticfiles%}
 
 {% block page-content %}
   <div class="row">
     <div class="col-12">
       <h1>Cloud-admin</h1>
+      <p>This application lets you administer your own access to
+      openstack-projects. This page lists all the openstack projects you have
+      access to:</p>
+      
+      <div id="osprojects">
+        <p>Loading projects <div class="spinner-border" role="status"></div></p>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-12 col-sm-12 col-md-8 col-lg-6">
-      <h2>Projects</h2>
-      <p>The projects available in this application are:</p>
-      <table class="table table-striped table-condensed">
-        <tr>
-          <th>Name</th>
-          <th>Description</th>
-        </tr>
-      </table>
-    </div>  
-  </div>
 {% endblock page-content %} 
+
+{% block scripts %} 
+<script>
+$(document).ready(function() {
+  $.ajax({
+    url: '{% url 'api.v1.openstack' %}',
+    success: function(data) {
+      $('div#osprojects').empty();
+      if(data['projects'].length) {
+        $('div#osprojects').append('<h2>Projects where you are admin</h2>')
+        $('div#osprojects').append('<p>These are all the projects where you can '+
+            'manage which users should have access.</p>')
+        for(var index in data['projects']) {
+          var project = data['projects'][index];
+          $('div#osprojects').append('<h3>' + project['name'] + '</h3>');
+          $('div#osprojects').append('<div class="projectinfo row" id="' +
+              project['id'] + '"><div class="col"><p>Loading project-information...</p>' +
+              '<div class="spinner-border" role="status"></div></div></div>');
+          $('div.projectinfo#' + project['id']).load(project['infourl']);
+        }
+      }
+
+      if(data['readaccess'].length) {
+        $('div#osprojects').append('<h2>Other projects</h2>');
+        $('div#osprojects').append('<p>These are the projects which you can use '+
+            'through the openstack-API or through the horizon web-interface. '+
+            'You cant manage access to these projects.</p>');
+        for(var index in data['readaccess']) {
+          var project = data['readaccess'][index];
+          $('div#osprojects').append('<h3>' + project['name'] + '</h3>');
+          $('div#osprojects').append('<div class="projectinfo row" id="' +
+              project['id'] + '"><div class="col"><p>Loading project-information...</p>' +
+              '<div class="spinner-border" role="status"></div></div></div>');
+          $('div.projectinfo#' + project['id']).load(project['infourl']);
+        }
+      }
+    },
+    error: function(data) {
+      alert(data['responseText']);
+    },
+  });
+});
+</script>
+{% endblock scripts %} 
